--- a/index.htm
+++ b/index.htm
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <title>WF Odonto e Cirúrgica</title>
+    <title>WN Odonto Medical</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="shortcut icon" href="favicon.ico?v=1658807371668">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1658807371668">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1658807371668">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1658807371668">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1658807371668">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1658807371668">
-	<link rel="manifest" href="manifest.json?v=1658807371668">
+    <link rel="shortcut icon" href="favicon.ico?v=1658889490231">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1658889490231">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1658889490231">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1658889490231">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1658889490231">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1658889490231">
+	<link rel="manifest" href="manifest.json?v=1658889490231">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/pt.txt?v=1658807371668" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1658807371668" as="script"/>
-	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/r/2/0_0.jpg?v=1658807371668" as="image"/>
-	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/l/2/0_0.jpg?v=1658807371668" as="image"/>
-	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/u/2/0_0.jpg?v=1658807371668" as="image"/>
-	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/d/2/0_0.jpg?v=1658807371668" as="image"/>
-	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/f/2/0_0.jpg?v=1658807371668" as="image"/>
-	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/b/2/0_0.jpg?v=1658807371668" as="image"/>
+	<link rel="preload" href="locale/pt.txt?v=1658889490231" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1658889490231" as="script"/>
+	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/r/2/0_0.jpg?v=1658889490231" as="image"/>
+	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/l/2/0_0.jpg?v=1658889490231" as="image"/>
+	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/u/2/0_0.jpg?v=1658889490231" as="image"/>
+	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/d/2/0_0.jpg?v=1658889490231" as="image"/>
+	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/f/2/0_0.jpg?v=1658889490231" as="image"/>
+	<link rel="preload" href="media/panorama_2CFD45BC_3834_92E0_41C9_46C0D3673020_0/b/2/0_0.jpg?v=1658889490231" as="image"/>
 	<meta name="description" content="Maior Dental do Norte e Nordeste"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="lib/tdvplayer.js?v=1658807371668"></script>
-    <script src="script.js?v=1658807371668"></script>
+    <script src="lib/tdvplayer.js?v=1658889490231"></script>
+    <script src="script.js?v=1658889490231"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1658807371668","mobile":"script_mobile.js?v=1658807371668"};
+        var devicesUrl = {"general":"script_general.js?v=1658889490231","mobile":"script_mobile.js?v=1658889490231"};
 
         (function()
         {
@@ -72,9 +72,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1658807371668');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1658807371668');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1658807371668');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1658889490231');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1658889490231');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1658889490231');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -320,7 +320,7 @@
         #viewer { z-index:1; }
         
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1658807371668">
+    <link rel="stylesheet" href="fonts.css?v=1658889490231">
 </head>
 <body>
     
